# auction

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
auction/: asgi.py  celery.py  settings.py  urls.py
auction_app/: admin.py  models.py  serializers.py  tasks.py  tests.py
auction_app/migrations/: 0001_initial.py  0002_auto_20210319_1240.py  0003_baseauction_status.py  0004_auto_20210406_0816.py  0005_auto_20210514_1110.py
auction_app/services/: auction_tasks_service.py  email_service.py  offers_service.py
item_app/: admin.py  models.py  serializers.py
item_app/migrations/: 0001_initial.py  0002_auto_20210319_1240.py
lot_app/: admin.py  apps.py  consumers.py  middlewares.py  models.py  routing.py  serializers.py  urls.py  validators.py  views.py
lot_app/migrations/: 0001_initial.py  0002_offer.py
lot_app/services/: make_offer_service.py  process_celery_task.py  web_socket_service.py
user/: urls.py
user/management/commands/: createusers.py
